== 1.4.7

    Security Fixes:
    ----------------------------
    + XXS (reflected) in ripe-arin-query;

== 1.4.6

    Bugfixes:
    ----------------------------
    + Require unique subnets not working as intended (#3529);

    Security Fixes:
    ----------------------------
    + Incorrect privilege assignments (#3506);

== 1.4.5

    Bugfixes:
    ----------------------------
    + Fix for SAML/2FA login redirection after timeout (#3492);
    + php_sessions table doesn't exist error when upgrading (#3417);
    + RFC 6265 compliant cookies (#3452);

    Security Fixes:
    ----------------------------
    + SQL injection in edit-bgp-mapping-search.php;
    + Stored XSS in the "Site title" parameter;
    + XSS while uploading CVS files;
    + XSS (reflected) in 'find subnets';

== 1.4.4

    Bugfixes:
    ----------------------------
    + Allow UTF-8 in instruction widgets (#3360);
    + Exclude IPv6 from Ping and Discovery scans (#3354);

    Security Fixes:
    ----------------------------
    + XSS (reflected) in IP calculator (#3351);
    + XSS in pass-change/result.php (#3373);

== 1.4.3

    Bugfixes:
    ----------------------------
    + FPing discovery marks all addresses as alive (#2888);
    + SNMP, number of discovered hosts exceed maximum warning (#3279);

    Security Fixes:
    ----------------------------
    + PHP session ID fixation (#3342);

== 1.4.2

    Enhancements, changes:
    ----------------------------
    + SameSite attribute enabled for site cookies;

    Bugfixes:
    ----------------------------
    + Fix generated functions/upgrade_queries.php queries (#3130);
    + Table layout not aligned (#3105,#3113);
    + Invalid scan type () error (#2785);
    + Invalid CSRF cookie editing rack items (#2556);
    + MySQL 8.0 compatibility (#3036);

    Security Fixes:
    ----------------------------
    + Upgraded jQuery to 3.5.1 (#3119);
    + Stored XSS in instructions widgets (#3025);

== 1.4.1

    Bugfixes: