@@ -8,8 +8,8 @@ if( !empty($_SERVER['PHP_AUTH_USER']) ) {
     // try to authenticate
 	$User->authenticate ($_SERVER['PHP_AUTH_USER'], '');
 	// Redirect user where he came from, if unknown go to dashboard.
-	if( !empty($_COOKIE['phpipamredirect']) )   { header("Location: ".safeurlencode($_COOKIE['phpipamredirect'])); }
-	else                                        { header("Location: ".create_link("dashboard")); }
+	if ($redirect = $User->get_redirect_cookie()) { header("Location: " . $redirect); }
+	else                                          { header("Location: " . create_link("dashboard")); }
 	exit();
 }
 // disable requests module for public
